# conan-matlab-imgui-plots

./: CMakeLists.txt  README.md  conanfile.py  run_matlab_imgui_plot_debug.bat  run_matlab_imgui_plot_release.bat
Test/: CorePlots.h  TestMatlabImGuiPlot.m  main.cpp
Test/profiles/: unix  window
include/: MatlabImGuiPlot.h
source/: MatlabImGuiPlot.cpp  imGuiPlotMex.cpp
